# ImageProcessingCellSegmentation

./: .gitignore  README.md  pyproject.toml
docs/: Pipeline.xml  README.md
src/: __main__.py
src/segmentation/: ImageSegmentation.py
